manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
  namespace: default
  labels:
    app: helloworld #  ← label совпадает с Service
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld
          image: ghcr.io/viktor8881/helloworld:v18.5.207
          ports:
            - containerPort: 8080
