manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: default
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80 # Ingress ходит сюда
      targetPort: 80 # то же, что слушает контейнер
  type: ClusterIP
